<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/chatButton"
        android:layout_width="244dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:text="@string/chat" />

    <Button
        android:id="@+id/scheduleButton"
        android:layout_width="244dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:text="@string/schedule" />

    <Button
        android:id="@+id/meetingButton"
        android:layout_width="244dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:text="@string/meeting" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="244dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:text="@string/email" />
    <Button
        android:id="@+id/localTutoringCenters"
        android:layout_width="244dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:text="@string/local_tutoring_centers" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="244dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:text="Login" />

</LinearLayout>