<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:text="@string/chat_with_tutorme"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:textColor="#ffff0000"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="335dp">
        <TableRow>
    <Button
        android:id="@+id/general_inquiries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general_inquiries" />
        </TableRow>
        <TableRow>
    <Button
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_s_office" />
        </TableRow>
        <TableRow tools:ignore="ExtraText">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="15sp"
            android:text="Find your Counselor: " />

        <Spinner
            android:id="@+id/find_counselor"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:padding="15sp" />
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10sp">
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/contact_counselor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_selected_counselor" />
        </TableRow>
    </TableLayout>

</LinearLayout>